Getting started changes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!doctype html>
+<head>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/blitzer/jquery-ui.css">
+  <title>Driverless Car Ethics</title>
+</head>
 <h1>test</h1>
+<script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
