--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/blitzer/jquery-ui.css">
   <title>Driverless Car Ethics</title>
+  <script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <script>
+    $(function () {
+        $("#tabs").tabs();
+    });
+  </script>
+
 </head>
-<h1>test</h1>
-<script type="text/javascript" src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<body>
+  <div id="tabs">
+    <ul>
+      <li><a href="#tabs-1">Video</a></li>
+      <li><a href="#tabs-2">Economic Impact</a></li>
+      <li><a href="#tabs-3">Life Saving Impact</a></li>
+    </ul>
+    <div id="tabs-1">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/_qE5VzuYFPU" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div id="tabs-2">
+      <p>Placeholder for economic content.</p>
+    </div>
+    <div id="tabs-3">
+      <p>Placeholder for life saving impact</p>
+    </div>
+  </div>
+</body>
