More links and a misc page to be sorted

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="#tabs-1">Video</a></li>
       <li><a href="economic.html">Economic Impact</a></li>
       <li><a href="life.html">Life Saving Impact</a></li>
+      <li><a href="misc.html">Misc</a></li>
     </ul>
     <div id="tabs-1">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/_qE5VzuYFPU" frameborder="0" allowfullscreen></iframe>
