--- a/misc.html
+++ b/misc.html
@@ -11,3 +11,6 @@ Placeholder for Laws, future, etc
 <div>
   <a href="http://www.sciencedirect.com/science/article/pii/S0965856415000804">Preparing a nation for autonomous vehicles: opportunities, barriers and policy recommendations</a>
 </div>
+<div>
+  <a href="http://www.cbc.ca/amp/1.3648029">Driverless vehicles must have sophisticated moral algorithms, say researchers</a>
+</div>
