--- a/life.html
+++ b/life.html
@@ -11,3 +11,6 @@
 <div>
   <a href="https://www.technologyreview.com/s/542626/why-self-driving-cars-must-be-programmed-to-kill/">Why Self-Driving Cars Must Be Programmed to Kill</a>
 </div>
+<div>
+  <a href="https://www.researchgate.net/publication/303480862_Why_Ethics_Matters_for_Autonomous_Cars">Why Ethics Matters for Autonomous Cars</a>
+</div>
