--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <li><a href="#tabs-1">Video</a></li>
       <li><a href="economic.html">Economic Impact</a></li>
       <li><a href="life.html">Life Saving Impact</a></li>
-      <li><a href="misc.html">Misc</a></li>
+      <li><a href="data.html">Data Privacy</a></li>
+      <li><a href="misc.html">Laws and Future</a></li>
     </ul>
     <div id="tabs-1">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/_qE5VzuYFPU" frameborder="0" allowfullscreen></iframe>
