--- a/misc.html
+++ b/misc.html
@@ -1,4 +1,4 @@
-Placeholder for Laws, future, etc
+<p>Placeholder for Laws, future, etc</p>
 <div>
   <a href="http://www.driverless-future.com/?cat=15">driverless-future.com</a>
 </div>
