favicon and my outline notes

--- a/misc.html
+++ b/misc.html
@@ -14,3 +14,20 @@
 <div>
   <a href="http://www.cbc.ca/amp/1.3648029">Driverless vehicles must have sophisticated moral algorithms, say researchers</a>
 </div>
+<div>
+  <h2>Chris's Outline</h2>
+  <p>Permissionless model: Default is to allow new technologies until an issue arrises which is then dealt with sepcifically. Trail and error.
+Precautionary model: Default is to disallow until a time that it can be proved safe.
+Precautionary model can lead to stunted development and is essentially living in fear of the worst happening.
+Tie to SOPA, trying to regulate things that aren't fully understood.</p>
+<p>Legal standards here could evolve gradually through a body of common-law cases, the same way they have for traditional automobiles and many other technologies.
+...as manufacturers come to possess a greater volume of data about the operation of vehicles and are in a position to take steps to avoid or correct potential risks, their liability will likely ratchet up over time.They will become what economists refer to as the “least cost avoider,” or the party who is in the best position to minimize risk at the lowest cost.</p>
+<p>Computer scientists Joe Palca and Kurt Dresner have been working on developing “smart intersections” that would increase traffic flow to 10 times its current speed by using car-to-intersection communication systems.</p>
+<p>A different but potentially equally pressing infrastructure issue concerns access to adequate wireless spectrum. Many current intelligent vehicle systems rely on dedicated shortrange communications (DSRC) systems to operate properly.
+Nonetheless, adequate access to wireless spectrum for DSRC—and the technical standards that should govern the use of that spectrum—remain the subject of intense debate between various intelligent-vehicle stakeholders as well as federal and state regulatory agencies.
+But 5G and other advanced licensed and unlicensed wireless systems will require legislators and regulators at the Federal Communications Commission (FCC) to open up more wireless spectrum, which may be challenging in the short term given the many other sectors and innovators also clamoring for more spectrum.</p>
+<p>While the ideal solution would be no tax at all, it is unlikely that the onset of autonomous vehicles will come without any tax scheme.
+States like Oregon, Washington, Colorado, Nevada, and California have already begun experimenting with the idea of taxing all motorists based on miles traveled.
+A prime example of how not to approach taxation is Washington, DC, Council Member Mary Cheh’s 2012 proposed legislation that would apply a VMT tax of 1.875 cents per mile to driverless cars. 
+Suffice it to say, the more taxes levied specifically on this technology, the less likely we are to see the type of innovation and development that characterized the rise of the Internet and similar technologies.</p>
+</div>
