--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Driverless Car Ethics</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <link rel="shortcut icon" type="image/png" href="eco-green-car-icon-300px.png"/>
   <script>
     $(function () {
         $("#tabs").tabs();
