starting to style

--- a/economic.html
+++ b/economic.html
@@ -8,3 +8,6 @@
 <div>
   <a href="http://www.makeuseof.com/tag/self-driving-cars-endanger-millions-american-jobs-thats-okay">Self Driving Cars Endanger Millions of American Jobs (And That’s Okay)</a>
 </div>
+<div>
+  <h2> Economic Impact of Widespread Automation</h2>
+  <p>
