Switch to our actual video

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 home: true
 ---
 <div id="video">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/_qE5VzuYFPU" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/mxT5Pp4R22U" frameborder="0" allowfullscreen></iframe>
 </div>
